New form application
This application is new reactive application in which we can fill user details with custom validators.

--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div [ngStyle]="{'background-image':bgColor()}">
 
 </div> 
+<app-forms-page></app-forms-page>
 <!-- <app-reactiveform2></app-reactiveform2> -->
 <!-- <app-templateform-assignment></app-templateform-assignment> -->
 <!-- <app-regestration-form ></app-regestration-form> -->
@@ -10,7 +11,7 @@
 <!-- <p appCustomDirective>Normal paragraph for custom directive</p>
 <mat-slide-toggle>Toggle me!</mat-slide-toggle> -->
 
-<app-output></app-output>
+<!-- <app-output></app-output> -->
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <app-disp-name></app-disp-name> -->
 <!-- <app-directives></app-directives> -->
